ft: Loader. fix: whitespace in meta tag. Slider cards responsiveness below 576px.  SLider buttons when slider is not scollable.

--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,6 @@
   box-sizing: border-box;
 }
 
-/* body {
-  overflow: auto;
-} */
 .container {
   margin: 0 auto;
 }
@@ -81,6 +78,37 @@ button:hover {
   border-radius: 5px;
   z-index: 4;
 }
+
+/* Loader */
+.basic:before {
+  content: "";
+  display: block;
+  height: 50px;
+  width: 50px;
+  -webkit-animation: spin 0.5s infinite linear;
+  animation: spin 0.5s infinite linear;
+  border: 6px black solid;
+  border-left-color: white;
+  /* border: 6px var(--primary) solid;
+  border-left-color: var(--secondary); */
+  border-radius: 100%;
+  margin: 0 auto;
+}
+
+@-webkit-keyframes spin {
+  to {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  to {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
 /* Header */
 
 .h-wrap {
@@ -462,6 +490,7 @@ nav button:hover {
   font-family: "Montserrat";
   font-size: 12px;
   color: #798692;
+  white-space: nowrap;
 }
 .card a {
   text-decoration: none;
